Update MY NEW HTML.html

--- a/MY NEW HTML.html
+++ b/MY NEW HTML.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
     <head>
-        <title>TEST</title>
+        <title>TES</title>
         <style type="text/css">
             body {
                 background-color: black;
